# crashreader

./: .dockerignore  .gitattributes  Dockerfile  LICENSE  README.TXT  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build-env.yml  deploy-pages.yml
src/: App.jsx
src/Components/: CRHome.jsx  CRUpload.css  CRUpload.jsx
src/components/: CRAboutDialog.jsx  CRDefList.jsx  CRUpload.jsx
src/components_t/: CRUpload.jsx
src/utils/: strings.js
wasm/: Cargo.toml
wasm/src/: crash_info.rs  data.rs  disassembler.rs  lib.rs
