[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
breakpad-symbols = "0.19.1"
minidump = "0.19.1"
minidump-processor = { version = "0.19.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
tokio = { version = "1.35.0", features = ["rt"] }
wasm-bindgen = "0.2.89"
